2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, console/serial_mouse.c: Reflect
	termios_baud_to_number having been renamed to
	rtems_termios_baud_to_number.

2009-09-15	Till Straumann <strauman@slac.stanford.edu>

	PR 1344/bsps:
	* clock/ckinit.c: Fix more bugs (applied PR1344/attachment 702):
	TSC handler was used when 8254 was requested and vice versa.
	Also, nanosecond handler was never installed to RTEMS clock.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-22	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: improved read/write

2009-08-21	Roxana Leontie <roxana.leontie@gmail.com>

	* pc386/console/fb_vga.c: added read/write functionality; added thread
	safety to prevent multiple open() operations of the frame buffer device.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/tm27.h: Remove references to rtems_interrupt_catch since this
	archiecture does not use Simple Vectored Interrupt model.

2009-08-03	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: changed the reference to mw_fb.h into fb.h

2009-07-29	Roxana Leontie <roxana.leontie@gmail.com>

	* Makefile.am, preinstall.am, console/fb_vga.c: Switch to using
	frame_buffer_ naming. Joel cleaned up formatting and removed tabs
	that were there long before Roxana touched this file.
	* console/fb_vga.h: Removed.

2009-07-24	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: divided fb_screeninfo structure into
	fb_var_screeninfo and fb_fix_screeninfo; same with get_screen_info

2009-07-21	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: replaced the ioctl structures with linux
	framebuffer equivalents

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>
